--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@dcloudio/uni-mp-weixin": "^2.0.0-22420190823019",
     "@dcloudio/uni-stat": "^2.0.0-22420190823019",
     "flyio": "^0.6.2",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
